didnt update ipynb file

--- a/main/testing.ipynb
+++ b/main/testing.ipynb
@@ -81,7 +81,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x111d23690>"
+       "<matplotlib.collections.PathCollection at 0x11ecdae10>"
       ]
      },
      "execution_count": 8,
@@ -107,29 +107,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model0.Materials.create_material(materialName=\"Steel1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2942456716.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[11], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    model0.Materials{\"Steel1\"}\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A material with name -Steel2- already exists. Would you like to overwrite?\n",
+      "Material overwritten\n"
      ]
     }
    ],
    "source": [
-    "model0.Materials.materialsTable{\"Steel1\"}"
+    "model0.Materials.create_material(materialName=\"Steel2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model0.Materials.materialsTable[\"Steel2\"].set_tensile_properties(youngMod = 70000, poisson =0.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Steel2', 'Emod': 70000, 'poisson': 0.25}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model0.Materials.materialsTable[\"Steel2\"].get_material_vars()"
    ]
   },
   {
