started with the fatigur part

--- a/notebooks/testing_inclusions.ipynb
+++ b/notebooks/testing_inclusions.ipynb
@@ -592,7 +592,7 @@
    ],
    "source": [
     "solver = PDFatigueSolver(numModel=model0)\n",
-    "solver.solve_for_eq3()"
+    "solver.solve_for_static_eq()"
    ]
   },
   {
