still need to implement the fatigue increment update. Also think about the fatigue procedure!

--- a/notebooks/DCB-test.ipynb
+++ b/notebooks/DCB-test.ipynb
@@ -697,14 +697,15 @@
      "text": [
       "WARNING: s_max not specified. Setting s_max array = bondStretches array (bondStretches from inputState)\n",
       "Step 0\n",
-      "Residual force norm =  0.00014720649587185441\n",
-      "Change of residual from previous step: 0.9998527935041281\n",
+      "Normalized residual force =  0.00014720649587185441\n",
+      "Fraction of residual from previous step: 0.9998527935041281\n",
       "Step 1\n",
-      "Residual force norm =  0.0001585868542894886\n",
-      "Change of residual from previous step: 0.07730880590718603\n",
-      "Damage has converged in <built-in function iter> FATIGUE CRACK GROWTH steps! Residual forces/Externalforces = 0.0001585868542894886.Change of residual from previous step: 0.07730880590718603\n",
+      "Normalized residual force =  0.0001585868542894886\n",
+      "Fraction of residual from previous step: 0.07730880590718603\n",
+      "--------------------------------------------------------\n",
+      "Damage has converged in 1 FATIGUE CRACK GROWTH step/s!\n",
       "Residual forces/Externalforces = 0.0001585868542894886\n",
-      "Change of residual from previous step: 0.07730880590718603\n"
+      "Fraction of residual from previous step: 0.07730880590718603\n"
      ]
     }
    ],
@@ -714,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +724,7 @@
        "1.077308805907186"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,8 +734,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
