--- a/notebooks/DCB-test.ipynb
+++ b/notebooks/DCB-test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "[0, [0.0, 0.0], 4e-06]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "(0.00140625, 0.0201682491341567)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "array([   0,    1,    2, ..., 2997, 2998, 2999])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
        "True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -736,14 +736,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING: s_max not specified. Setting s_max array = bondStretches array (bondStretches from inputState)\n",
+      "WARNING: s_max not specified. Setting s_max array = bondStretches array (bondStretches from inputState)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Filip Jerenec\\Python\\GitHub repos\\Verse2\\src\\modules\\PDFatigueModel.py:590: NumbaWarning: \u001b[1m\n",
+      "Compilation is falling back to object mode WITH looplifting enabled because Function \"_calculate_fatigue_damage_increment\" failed type inference due to: \u001b[1mUntyped global name 'lambertw':\u001b[0m \u001b[1m\u001b[1mCannot determine Numba type of <class 'function'>\u001b[0m\n",
+      "\u001b[1m\n",
+      "File \"..\\src\\modules\\PDFatigueModel.py\", line 632:\u001b[0m\n",
+      "\u001b[1mdef _calculate_fatigue_damage_increment(\n",
+      "    <source elided>\n",
+      "            f = np.exp(d * e)\n",
+      "\u001b[1m            fatigue_damage_increments[bond] = a * np.real(lambertw(b * c * f))\n",
+      "\u001b[0m            \u001b[1m^\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0m\n",
+      "  @jit\n",
+      "c:\\Users\\Filip Jerenec\\Python\\GitHub repos\\Verse2\\src\\modules\\PDFatigueModel.py:590: NumbaWarning: \u001b[1m\n",
+      "Compilation is falling back to object mode WITHOUT looplifting enabled because Function \"_calculate_fatigue_damage_increment\" failed type inference due to: \u001b[1m\u001b[1mCannot determine Numba type of <class 'numba.core.dispatcher.LiftedLoop'>\u001b[0m\n",
+      "\u001b[1m\n",
+      "File \"..\\src\\modules\\PDFatigueModel.py\", line 623:\u001b[0m\n",
+      "\u001b[1mdef _calculate_fatigue_damage_increment(\n",
+      "    <source elided>\n",
+      "    fatigue_damage_increments = np.zeros_like(current_bond_stretches)\n",
+      "\u001b[1m    for bond in prange(current_bond_stretches.shape[0]):\n",
+      "\u001b[0m    \u001b[1m^\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0m\n",
+      "  @jit\n",
+      "c:\\Users\\Filip Jerenec\\envs\\PDenv\\lib\\site-packages\\numba\\core\\object_mode_passes.py:151: NumbaWarning: \u001b[1mFunction \"_calculate_fatigue_damage_increment\" was compiled in object mode without forceobj=True, but has lifted loops.\n",
+      "\u001b[1m\n",
+      "File \"..\\src\\modules\\PDFatigueModel.py\", line 622:\u001b[0m\n",
+      "\u001b[1mdef _calculate_fatigue_damage_increment(\n",
+      "    <source elided>\n",
+      "    \"\"\"\n",
+      "\u001b[1m    fatigue_damage_increments = np.zeros_like(current_bond_stretches)\n",
+      "\u001b[0m    \u001b[1m^\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n",
+      "  warnings.warn(errors.NumbaWarning(warn_msg,\n",
+      "c:\\Users\\Filip Jerenec\\envs\\PDenv\\lib\\site-packages\\numba\\core\\object_mode_passes.py:161: NumbaDeprecationWarning: \u001b[1m\n",
+      "Fall-back from the nopython compilation path to the object mode compilation path has been detected, this is deprecated behaviour.\n",
+      "\n",
+      "For more information visit https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit\n",
+      "\u001b[1m\n",
+      "File \"..\\src\\modules\\PDFatigueModel.py\", line 622:\u001b[0m\n",
+      "\u001b[1mdef _calculate_fatigue_damage_increment(\n",
+      "    <source elided>\n",
+      "    \"\"\"\n",
+      "\u001b[1m    fatigue_damage_increments = np.zeros_like(current_bond_stretches)\n",
+      "\u001b[0m    \u001b[1m^\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n",
+      "  warnings.warn(errors.NumbaDeprecationWarning(msg,\n",
+      "c:\\Users\\Filip Jerenec\\Python\\GitHub repos\\Verse2\\src\\modules\\PDFatigueModel.py:590: NumbaWarning: \u001b[1m\n",
+      "Compilation is falling back to object mode WITHOUT looplifting enabled because Function \"_calculate_fatigue_damage_increment\" failed type inference due to: \u001b[1mUntyped global name 'lambertw':\u001b[0m \u001b[1m\u001b[1mCannot determine Numba type of <class 'function'>\u001b[0m\n",
+      "\u001b[1m\n",
+      "File \"..\\src\\modules\\PDFatigueModel.py\", line 632:\u001b[0m\n",
+      "\u001b[1mdef _calculate_fatigue_damage_increment(\n",
+      "    <source elided>\n",
+      "            f = np.exp(d * e)\n",
+      "\u001b[1m            fatigue_damage_increments[bond] = a * np.real(lambertw(b * c * f))\n",
+      "\u001b[0m            \u001b[1m^\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0m\n",
+      "  @jit\n",
+      "c:\\Users\\Filip Jerenec\\envs\\PDenv\\lib\\site-packages\\numba\\core\\object_mode_passes.py:151: NumbaWarning: \u001b[1mFunction \"_calculate_fatigue_damage_increment\" was compiled in object mode without forceobj=True.\n",
+      "\u001b[1m\n",
+      "File \"..\\src\\modules\\PDFatigueModel.py\", line 623:\u001b[0m\n",
+      "\u001b[1mdef _calculate_fatigue_damage_increment(\n",
+      "    <source elided>\n",
+      "    fatigue_damage_increments = np.zeros_like(current_bond_stretches)\n",
+      "\u001b[1m    for bond in prange(current_bond_stretches.shape[0]):\n",
+      "\u001b[0m    \u001b[1m^\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n",
+      "  warnings.warn(errors.NumbaWarning(warn_msg,\n",
+      "c:\\Users\\Filip Jerenec\\envs\\PDenv\\lib\\site-packages\\numba\\core\\object_mode_passes.py:161: NumbaDeprecationWarning: \u001b[1m\n",
+      "Fall-back from the nopython compilation path to the object mode compilation path has been detected, this is deprecated behaviour.\n",
+      "\n",
+      "For more information visit https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit\n",
+      "\u001b[1m\n",
+      "File \"..\\src\\modules\\PDFatigueModel.py\", line 623:\u001b[0m\n",
+      "\u001b[1mdef _calculate_fatigue_damage_increment(\n",
+      "    <source elided>\n",
+      "    fatigue_damage_increments = np.zeros_like(current_bond_stretches)\n",
+      "\u001b[1m    for bond in prange(current_bond_stretches.shape[0]):\n",
+      "\u001b[0m    \u001b[1m^\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n",
+      "  warnings.warn(errors.NumbaDeprecationWarning(msg,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Max fatigue damage increment =  0.006660059210146875\n",
       "iter 0\n",
       "Normalized residual force =  9.845613246906026e-07\n",
@@ -764,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +927,7 @@
        "Text(0, 0.5, 'y [m]')"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -886,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +1067,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [55], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(\u001b[43msolver\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtest1\u001b[49m,label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtest1\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# plt.plot(solver.test2)\u001b[39;00m\n\u001b[0;32m      3\u001b[0m plt\u001b[38;5;241m.\u001b[39mlegend()\n",
+      "Cell \u001b[1;32mIn [37], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(\u001b[43msolver\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtest1\u001b[49m,label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtest1\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# plt.plot(solver.test2)\u001b[39;00m\n\u001b[0;32m      3\u001b[0m plt\u001b[38;5;241m.\u001b[39mlegend()\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'PDFatigueSolver' object has no attribute 'test1'"
      ]
     }
