did some SED simulationto get the SED distribution across the interface

--- a/notebooks/testing_irregular_disc.ipynb
+++ b/notebooks/testing_irregular_disc.ipynb
@@ -314,7 +314,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1dbf2e70ca0>"
+       "<matplotlib.collections.PathCollection at 0x1db3dfa40a0>"
       ]
      },
      "execution_count": 16,
@@ -453,8 +453,8 @@
      "output_type": "stream",
      "text": [
       "Iteration 0\n",
-      "Residual force norm =  0.0018399672545152956\n",
-      "Change of residual from previous step: 0.9981600327454847\n",
+      "Residual force norm =  0.00183894285347308\n",
+      "Change of residual from previous step: 0.9981610571465269\n",
       "Applied load was not large enough to cause damage!\n",
       "Solution did not converge!\n"
      ]
@@ -483,7 +483,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x1dbf9af8c70>"
+       "<matplotlib.colorbar.Colorbar at 0x1db43d4ffa0>"
       ]
      },
      "execution_count": 23,
@@ -673,7 +673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
